Finish quote section, call to action and footer

--- a/index.html
+++ b/index.html
@@ -57,5 +57,34 @@
         </div>
       </div>
     </section>
+
+    <section class="quote-section">
+      <div class="flex-container">
+        <p class="quote">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's jsut filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice
+        </p>
+        <p class="signature">-Thor, God of Thunder</p>
+      </div>
+    </section>
+
+    <section class="last">
+      <div class="container action">
+        <div class="last-text">
+          <p class="header-action">Call to action! It's time!</p>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <div class="sign-button">
+          <button class="sign-up">Sign up</button>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p>Copyright © jabldawi 2024</p>
+    </footer>
   </body>
 </html>
